fix 元素z-index层级问题，动态计算占位元素的高度
(cherry picked from commit 503713f3aff55ebf33375319ccd5a1030cd179c9)

--- a/airtest/report/css/report.css
+++ b/airtest/report/css/report.css
@@ -204,10 +204,9 @@ h2.empty-report{
   white-space: nowrap;
   background: #121c34;
   padding-top: 20px;
-  z-index: 99;
+  z-index: 3;
 }
 .gallery .placeholder {
-  height: 130px;
   background-color: #121c34;
 }
 .gallery .thumbnail {
@@ -642,7 +641,7 @@ pre.trace {
   width: 100%;
   height: 100%;
   background: rgba(255, 255, 255, 0.2);
-  z-index: 2;
+  z-index: 4;
   display: none;
 }
 .mask .content {
